plugins {
    id 'net.fabricmc.fabric-loom' version "${loom_version}"
    id 'java'
    id 'checkstyle'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = 'worldarchive'
}

repositories {
    exclusiveContent {
        forRepository {
            maven {
                name = 'Modrinth'
                url = 'https://api.modrinth.com/maven'
            }
        }
        filter {
            includeGroup 'maven.modrinth'
        }
    }
}

loom {
    splitEnvironmentSourceSets()

    mods {
        worldarchive {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${minecraft_version}"
    implementation "net.fabricmc:fabric-loader:${loader_version}"
    implementation "net.fabricmc.fabric-api:fabric-api:${fabric_api_version}"
    // Mod Menu is optional at runtime; the modmenu entrypoint only loads when it is installed.
    compileOnly "maven.modrinth:modmenu:${modmenu_version}"
    runtimeOnly "maven.modrinth:modmenu:${modmenu_version}"

    testImplementation platform('org.junit:junit-bom:6.1.3')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation sourceSets.client.output
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

processResources {
    def resourceProperties = [
        version: project.version
    ]
    inputs.properties resourceProperties

    filesMatching('fabric.mod.json') {
        expand resourceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 25
    options.encoding = 'UTF-8'
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    systemProperty 'java.io.tmpdir', file(System.getProperty('java.io.tmpdir')).canonicalPath
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
    withSourcesJar()
}

checkstyle {
    toolVersion = '14.1.0'
    configFile = file('config/checkstyle/checkstyle.xml')
}

tasks.named('jar') {
    def archiveProjectName = project.name
    inputs.property 'projectName', archiveProjectName

    from('LICENSE') {
        rename { "${it}_${archiveProjectName}" }
    }
}

apply from: 'gradle/quality.gradle'
